syntax = "proto3";

option csharp_namespace = "ProjectManager";

package projectManager;

// The greeting service definition.
service ProjectManager{
  // Sends a greeting
  rpc CreateAbpBoilerplateProject(ProjectRequest) returns (ProjectReply);
  rpc AddEntityToExistingProject(AddEntityRequest) returns (ProjectReply);
}

// The request message containing the user's name.
message ProjectRequest{
  string id = 1;
  string name = 2;
}

// The response message containing the greetings.
message ProjectReply {
  string id = 1;
}

message AddEntityRequest{
  string id = 1;
  string projectName = 2;
  string entityName = 3;
  string stringified = 4;
}