syntax = "proto3";

option csharp_namespace = "TypeScriptCodeGenerator";

package typeScriptCodeGenerator;

service TypeScriptCodeGenerator {
  rpc CreateDtos (Entity) returns (DtoResult);
  rpc CreateService (Entity) returns (ServiceResult);
  rpc CreateEnum (EnumRequest) returns (StringifyResult);
  rpc CreateComponents(Entity) returns (ComponentResult);
  rpc CreateNavigationItems(CreateNavigationItemRequest) returns (StringifyResult);
}

message Entity {
  string projectName = 1;
  string name = 2;
  PrimaryKeyType primaryKeyType = 3;
  repeated Property properties = 4;
  repeated Entity ParentEntities = 5;
  string projectDisplayName = 6;
}

message Property {
  string type = 1;
  string name = 2;
  bool nullable = 3;
  bool isRelationalProperty = 4;
  optional PrimaryKeyType relationalEntityPrimaryKeyType = 5;
  optional string relationalEntityName = 6;
  optional RelationType relationType = 7;
  bool isEnumerateProperty = 8;
  bool displayOnList = 9;
  bool filterOnList = 10;
}

message DtoResult{
  string fullOutputStringify = 1;
  string partOutputStringify = 2;
  string createInputStringify = 3;
  string updateInputStringify = 4;
  string getInputStringify = 5;
  string deleteInputStringify = 6;
}

message ServiceResult{
  string stringify = 1;
}

enum PrimaryKeyType{
  int = 0;
  long = 1;
  guid = 2;
};

enum TenantType{
  none = 0;
  may = 1;
  must = 2;
};

enum RelationType{
  OneToOne = 0;
  OneToMany = 1;
  ManyToMany = 2;
};

message EnumRequest{
  string name = 1;
  repeated EnumValue values = 2;
}

message EnumValue{
  string name = 1;
  int32 value = 2;
}

message StringifyResult{
  string stringify = 1;
}

message ComponentResult{
  ComponentResultEto listComponent = 1;
  ComponentResultEto createComponent = 2;
  ComponentResultEto editComponent = 3;
}

message ComponentResultEto{
  string componentHtmlStringify = 1;
  string componentTsStringify = 2;
  string componentCssStringify = 3;
}

message CreateNavigationItemRequest{
  repeated NavigationItemRequest navigations = 1;
}

message NavigationItemRequest{
  string caption = 1;
  int32 index = 2;
  string icon = 3;
  optional string entityName = 4;
  repeated NavigationItemRequest navigations = 5;
}